fuck man i don't even know

--- a/src/base/_Grid.sass
+++ b/src/base/_Grid.sass
@@ -32,9 +32,9 @@
     &> .col
       padding: 0
 
-  // & + .row
-  //  margin-top: -.5rem
-  //  padding-top: 0
+  & + .row
+    margin-top: -.5rem
+    padding-top: 0
 
   // Vertically Align Columns
   // .row-* vertically aligns every .col in the .row
@@ -152,7 +152,6 @@
 
 // Larger than mobile screen
 @media (min-width: 40rem)
-
   .row
     flex-direction: row
     margin-left: -1rem
