--- a/src/components/_Switches.sass
+++ b/src/components/_Switches.sass
@@ -1,116 +1,39 @@
-
-// Switches
-// ––––––––––––––––––––––––––––––––––––––––––––––––––
-
 .switch
-    margin: .25rem
-    position: relative
-    display: inline-block
+  line-height: 1.8rem
+  padding: .3rem 2rem .3rem 3.6rem
+  cursor: pointer
+  display: inline-block
+  position: relative
+  input
+    display: none
+  .switch-icon
+    line-height: 2.4rem
     vertical-align: top
-    width: 7rem
-    height: 2.4rem
-    padding: .3rem
-    background-color: transparent
-    border-radius: 1.2rem
-    cursor: pointer
-
-.switch-input
-    position: absolute
-    top: 0
-    left: 0
-    margin: .25em .5em
-    opacity: 0
-
-.switch-input:focus ~ .switch-handle
-    box-shadow: 0 .1rem .3rem 0 rgba(0, 0, 0, .4)
-
-.switch-group
-    display: inline-block
-    width: 100%
-
-
-//  No label
-
-.switch.no-label
-    width: 4.6rem
-
-.switch.no-label > .switch-input:checked ~ .switch-handle
-    left: 2rem
-
-.switch.no-label > .switch-trough
-    font-size: 0
-
-
-// Switch through
-
-.switch-trough
-    font-family: inherit
-    font-weight: 700
-    position: relative
-    display: block
-    height: inherit
-    font-size: 1.1rem
-    text-transform: uppercase
+    border: .1rem solid $gray-lightest
     background: $gray-lightest
-    border-radius: inherit
-    box-shadow: inset 0 .1rem .2rem rgba(0, 0, 0, .12), inset 0 0 .2rem rgba(0, 0, 0, .15)
-    transition: 150ms ease-out
-    transition-property: opacity background
-
-.switch-trough:before, .switch-trough:after
+    display: inline-block
+    width: 3rem
+    height: 1.8rem
+    padding: 0
+    border-radius: .9rem
     position: absolute
-    top: 50%
-    margin-top: -.5rem
-    line-height: 1
-    transition: inherit
+    top: .3rem
+    left: 0
+    outline: none
+    &::after
+      content: ""
+      display: block
+      width: 1.6rem
+      height: 1.6rem
+      border-radius: .8rem
+      position: absolute
+      top: 0
+      left: 0
+      background: $white
+      transition: left .15s ease
 
-.switch-trough:before
-    content: attr(data-off)
-    right: 1.1rem
-    color: $gray
-
-.switch-trough:after
-    content: attr(data-on)
-    left: 1.1rem
-    color: $white
-    opacity: 0
-
-
-// Switch handle
-
-.switch-handle
-    position: absolute
-    top: .4rem
-    left: .4rem
-    width: 2.2rem
-    height: 2.2rem
-    background: $initial
-    border-radius: 50%
-    box-shadow: 0 .1rem .3rem 0 rgba(0, 0, 0, .4)
-    transition: left 150ms ease-out
-
-.switch-handle:before
-    content: ''
-    position: absolute
-    top: 50%
-    left: 50%
-    margin: -.6rem 0 0 -.6rem
-    width: 1.2rem
-    height: 1.2rem
-    border-radius: .6rem
-
-
-
-// Checked switch
-
-.switch-input:checked ~ .switch-trough
+  input:checked + .switch-icon
     background: $primary
-
-.switch-input:checked ~ .switch-trough:before
-    opacity: 0
-
-.switch-input:checked ~ .switch-trough:after
-    opacity: 1
-
-.switch-input:checked ~ .switch-handle
-    left: 4.4rem
+    border-color: $primary
+    &::after
+      left: 1.2rem
