--- a/src/components/_Blockquote.sass
+++ b/src/components/_Blockquote.sass
@@ -3,11 +3,8 @@
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 blockquote
-  +media(mobile)
-    border-left: .3rem solid $quaternary
-    margin-left: 0
-    padding: 1rem 1.5rem
-  border-left: .5rem solid $quaternary
-  margin-left: -2.25rem
-  margin-right: 0
-  padding: 1rem 0 1rem 1.75rem
+  margin: 0
+  padding: 1rem 0 .5rem 1.75rem
+  color: $gray-light
+  font-style: italic
+  border-left: .5rem solid $gray-lightest
