d-d-d-drop that shit

--- a/src/components/_Header.sass
+++ b/src/components/_Header.sass
@@ -102,9 +102,9 @@
   a:not(.button)
     color: $gray
     &:hover
-      color: $gray-darker
-    &.is-active
       color: $primary
+    &.is-active
+      color: darken($primary, .3)
 
 .header-tab
   align-items: center
