im bad at commit msgs

--- a/src/base/_Color.sass
+++ b/src/base/_Color.sass
@@ -11,7 +11,7 @@ $gray-lightest: #d1d1d1
 
 $black: #0a0a0a
 $white: #ffffff
-$faded: #fafafa
+$faded: #f9f9f9
 $blue: #42afe3
 $green: #97cd76
 $purple: #847bb9
