--- a/src/base/_Variables.sass
+++ b/src/base/_Variables.sass
@@ -11,7 +11,7 @@
 // ---------
 
 $global-font-size: 62.5%
-$global-width: 64.5rem
+$global-width: 65rem
 $global-lineheight: 1.65
 $global-radius: .3rem
 
@@ -20,6 +20,17 @@ $body-font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif
 $monospace-font-family: 'Menlo', 'Consolas', 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', 'Monaco', monospace
 $colors: (dark: ($gray-dark, $dark-invert), primary: ($primary, $primary-invert), blue: ($blue, $blue-invert), green: ($green, $green-invert), yellow: ($yellow, $yellow-invert), red: ($red, $red-invert))
 $body-font-color: $gray
+
+$z-index-1:   100;
+$z-index-2:   200;
+$z-index-3:   300;
+$z-index-4:   400;
+$z-index-5:   500;
+$z-index-6:   600;
+$z-index-7:   700;
+$z-index-8:   800;
+$z-index-9:   900;
+$z-index-10: 1000;
 
 // 2. Typography
 // -------------
