it's probably time i made a commit

--- a/src/base/_Color.sass
+++ b/src/base/_Color.sass
@@ -18,7 +18,7 @@ $purple: #847bb9
 $red: #ed6c63
 $yellow: #fce473
 
-$initial: #ffffff
+$initial: $white
 $primary: #536dfe
 $secondary: #8f979e
 $tertiary: #f4f5f6
