--- a/src/base/_Variables.sass
+++ b/src/base/_Variables.sass
@@ -2,11 +2,6 @@
 // Settings
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
-// Imports
-// ---------
-
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,700)
-
 // 1. Global
 // ---------
 
@@ -16,7 +11,7 @@ $global-lineheight: 1.65
 $global-radius: .3rem
 
 $body-background-color: $white
-$body-font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif
+$body-font-family: -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif
 $monospace-font-family: 'Menlo', 'Consolas', 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', 'Monaco', monospace
 $colors: (dark: ($gray-dark, $dark-invert), primary: ($primary, $primary-invert), blue: ($blue, $blue-invert), green: ($green, $green-invert), yellow: ($yellow, $yellow-invert), red: ($red, $red-invert))
 $body-font-color: $gray
