Form states, tweaks to buttons & switches

--- a/src/base/_Color.sass
+++ b/src/base/_Color.sass
@@ -7,7 +7,7 @@ $gray-dark: #333
 $gray: #444
 $gray-light: #666
 $gray-lighter: #999
-$gray-lightest: #d1d1d1
+$gray-lightest: #E0E0E0
 
 $black: #0a0a0a
 $white: #ffffff
