--- a/src/components/_Button.sass
+++ b/src/components/_Button.sass
@@ -50,13 +50,13 @@ input[type='submit']
     &:hover,
     &:focus
       background-color: transparentize($gray, .9)
-      border-color: transparentize($gray, .5)
+      border-color: transparentize($gray, .7)
       color: inherit
 
   &.clear
     background-color: transparent
     border-color: transparent
-    color: $gray
+    color: inherit
 
     &:hover,
     &:focus
@@ -75,6 +75,7 @@ input[type='submit']
     height: 4.5rem
     line-height: 4.5rem
     padding: 0 2rem
+
   &.btn-block
     display: block
     width: 100%
@@ -128,18 +129,23 @@ input[type='submit']
 .btn-group
   display: inline-flex
   flex-wrap: wrap
+
   .btn
     flex: 1 0 auto
+
     &:first-child:not(:last-child)
       border-bottom-right-radius: 0
       border-top-right-radius: 0
+
     &:not(:first-child):not(:last-child)
       border-radius: 0
       margin-left: -.1rem
+
     &:last-child:not(:first-child)
       border-bottom-left-radius: 0
       border-top-left-radius: 0
       margin-left: -.1rem
+
     &:hover,
     &:focus
       z-index: 99
