tooltips and shit

--- a/src/base/_Color.sass
+++ b/src/base/_Color.sass
@@ -7,10 +7,10 @@ $gray-dark: #333
 $gray: #444
 $gray-light: #666
 $gray-lighter: #999
-$gray-lightest: #E0E0E0
+$gray-lightest: #e0e0e0
 
 $black: #0a0a0a
-$white: #ffffff
+$white: #fff
 $faded: #f9f9f9
 $blue: #42afe3
 $green: #97cd76
