--- a/src/components/_Dropdown.sass
+++ b/src/components/_Dropdown.sass
@@ -40,7 +40,7 @@
   border: .1rem solid rgba(0,0,0,.1)
   border-radius: $global-radius
   box-shadow: 0 .1rem .2rem 0 rgba(0,0,0,.1)
-  transition: visibility 0s 0.15s, opacity 0.15s, margin-top 0.15s
+  transition: visibility 0s .15s, opacity .15s, margin-top .15s
   li
     margin: 0
     a
