--- a/src/ghast.sass
+++ b/src/ghast.sass
@@ -33,5 +33,6 @@
 @import 'components/table'
 @import 'components/tabs'
 @import 'components/titles'
+@import 'components/tooltips'
 @import 'utilities/utility'
 @import 'utilities/divider'
