--- a/src/utilities/_Utility.sass
+++ b/src/utilities/_Utility.sass
@@ -36,7 +36,7 @@
 
 // Text
 
-.text-centered
+.text-center
   text-align: center
 
 .text-left
@@ -68,5 +68,9 @@
 .disabled
   pointer-events: none
 
-.marginless
+.m-0
   margin: 0 !important
+.mb-0
+  margin-bottom: 0 !important
+.pb-0
+  padding-bottom: 0 !important
