--- a/src/ghast.sass
+++ b/src/ghast.sass
@@ -4,35 +4,35 @@
 
 
 // Important functions to be used in other files.
-@import 'utilities/functions'
+@import utilities/functions
 
 // Import core components.
-@import 'base/color'
-@import 'base/variables'
-@import 'base/mixins'
+@import base/color
+@import base/variables
+@import base/mixins
 
 // Import all components.
-@import 'base/base'
-@import 'base/grid'
-@import 'base/images'
-@import 'base/spacing'
-@import 'base/typography'
-@import 'components/blockquote'
-@import 'components/button'
-@import 'components/card'
-@import 'components/code'
-@import 'components/footer'
-@import 'components/form'
-@import 'components/header'
-@import 'components/hero'
-@import 'components/dropdown'
-@import 'components/link'
-@import 'components/list'
-@import 'components/media'
-@import 'components/switches'
-@import 'components/table'
-@import 'components/tabs'
-@import 'components/titles'
-@import 'components/tooltips'
-@import 'utilities/utility'
-@import 'utilities/divider'
+@import base/base
+@import base/grid
+@import base/images
+@import base/spacing
+@import base/typography
+@import components/blockquote
+@import components/button
+@import components/card
+@import components/code
+@import components/footer
+@import components/form
+@import components/header
+@import components/hero
+@import components/dropdown
+@import components/link
+@import components/list
+@import components/media
+@import components/switches
+@import components/table
+@import components/tabs
+@import components/titles
+@import components/tooltips
+@import utilities/utility
+@import utilities/divider
