Updates to documentation and small fixes

--- a/src/components/_button.sass
+++ b/src/components/_button.sass
@@ -43,7 +43,7 @@ input[type='submit']
       background-color: $gray-light
       border-color: $gray-light
 
-  &.outline
+  &.btn-outline
     background-color: transparent
     color: inherit
 
@@ -53,7 +53,7 @@ input[type='submit']
       border-color: transparentize($gray, .7)
       color: inherit
 
-  &.clear
+  &.btn-clear
     background-color: transparent
     border-color: transparent
     color: inherit
