--- a/src/base/_variables.sass
+++ b/src/base/_variables.sass
@@ -11,7 +11,7 @@ $global-lineheight: 1.65
 $global-radius: .3rem
 
 $body-background-color: $white
-$body-font-family: -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", "Oxygen", "Ubuntu", "Cantarell", sans-serif
+$body-font-family: -apple-system, '.SFNSText-Regular', 'San Francisco', 'Roboto', 'Segoe UI', 'Helvetica Neue', 'Lucida Grande', 'Oxygen', 'Ubuntu', 'Cantarell', sans-serif
 $monospace-font-family: 'Menlo', 'Consolas', 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', 'Monaco', monospace
 $colors: (dark: ($gray-dark, $dark-invert), primary: ($primary, $primary-invert), blue: ($blue, $blue-invert), green: ($green, $green-invert), yellow: ($yellow, $yellow-invert), red: ($red, $red-invert))
 $body-font-color: $gray
@@ -29,9 +29,6 @@ $z-index-10: 1000;
 
 // 2. Typography
 // -------------
-
-// Enables font antialiasing in Webkit/Chrome and Firefox
-$body-antialiased: true
 
 $size-1: 4.8rem
 $size-2: 4rem
