--- a/src/components/_switches.sass
+++ b/src/components/_switches.sass
@@ -22,7 +22,7 @@
     outline: none
     transition: all .15s ease
     &::after
-      content: ""
+      content: ''
       display: block
       width: 2rem
       height: 2rem
@@ -32,7 +32,6 @@
       left: 0
       background: $white
       transition: left .15s ease
-
   input:checked + .switch-icon
     background: $primary
     border-color: $primary
