--- a/src/base/_reset.sass
+++ b/src/base/_reset.sass
@@ -1,173 +1,422 @@
-//
-//  HTML5 Reset :: style.css
-//  ----------------------------------------------------------
-//  We have learned much from/been inspired by/taken code where offered from:
-//
-//  Eric Meyer          :: http://meyerweb.com
-//  HTML5 Doctor        :: http://html5doctor.com
-//  and the HTML5 Boilerplate :: http://html5boilerplate.com
-//
-//-------------------------------------------------------------------------------
+/*! normalize.css v4.2.0 | MIT License | github.com/necolas/normalize.css */
 
-// Let's default this puppy out
+/**
+ * 1. Change the default font family in all browsers (opinionated).
+ * 2. Correct the line height in all browsers.
+ * 3. Prevent adjustments of font size after orientation changes in IE and iOS.
+ */
 
-html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, menu, nav, section, time, mark, audio, video, details, summary
-  margin: 0
-  padding: 0
-  border: 0
-  font-size: 100%
-  vertical-align: baseline
-  background: transparent
+html {
+  font-family: sans-serif; /* 1 */
+  line-height: 1.15; /* 2 */
+  -ms-text-size-adjust: 100%; /* 3 */
+  -webkit-text-size-adjust: 100%; /* 3 */
+}
 
-article, aside, figure, footer, header, nav, section, details, summary
-  display: block
+/**
+ * Remove the margin in all browsers (opinionated).
+ */
 
-// Handle box-sizing while better addressing child elements:
-// http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
-html
-  box-sizing: border-box
+body {
+  margin: 0;
+}
 
-*,
-*:before,
-*:after
-  box-sizing: inherit
+/* HTML5 display definitions
+   ========================================================================== */
 
-// consider resetting the default cursor: https://gist.github.com/murtaugh/5247154
+/**
+ * Add the correct display in IE 9-.
+ * 1. Add the correct display in Edge, IE, and Firefox.
+ * 2. Add the correct display in IE.
+ */
 
-// Responsive images and other embedded objects
-img,
-object,
-embed
-  max-width: 100%
+article,
+aside,
+details, /* 1 */
+figcaption,
+figure,
+footer,
+header,
+main, /* 2 */
+menu,
+nav,
+section,
+summary { /* 1 */
+  display: block;
+}
 
-//
-//   Note: keeping IMG here will cause problems if you're using foreground images as sprites.
-//   In fact, it *will* cause problems with Google Maps' controls at small size.
-//  If this is the case for you, try uncommenting the following:
-//
-//#map img {
-//    max-width: none;
-//}
+/**
+ * Add the correct display in IE 9-.
+ */
 
-// force a vertical scrollbar to prevent a jumpy page
-html
-  overflow-y: scroll
+audio,
+canvas,
+progress,
+video {
+  display: inline-block;
+}
 
-// we use a lot of ULs that aren't bulleted.
-//  don't forget to restore the bullets within content.
-ul
-  list-style: none
+/**
+ * Add the correct display in iOS 4-7.
+ */
 
-blockquote, q
-  quotes: none
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
 
-blockquote:before,
-blockquote:after,
-q:before,
-q:after
-  content: ''
-  content: none
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
 
-a
-  margin: 0
-  padding: 0
-  font-size: 100%
-  vertical-align: baseline
-  background: transparent
+progress {
+  vertical-align: baseline;
+}
 
-del
-  text-decoration: line-through
+/**
+ * Add the correct display in IE 10-.
+ * 1. Add the correct display in IE.
+ */
 
-abbr[title], dfn[title]
-  border-bottom: 0.1rem dotted #000
-  cursor: help
+template, /* 1 */
+[hidden] {
+  display: none;
+}
 
-// tables still need cellspacing="0" in the markup
-table
-  border-collapse: collapse
-  border-spacing: 0
+/* Links
+   ========================================================================== */
 
-th
-  font-weight: bold
-  vertical-align: bottom
+/**
+ * 1. Remove the gray background on active links in IE 10.
+ * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
+ */
 
-td
-  font-weight: normal
-  vertical-align: top
+a {
+  background-color: transparent; /* 1 */
+  -webkit-text-decoration-skip: objects; /* 2 */
+}
 
-hr
-  display: block
-  height: 0.1rem
-  border: 0
-  border-top: 0.1rem solid #ccc
-  margin: 1rem 0
-  padding: 0
+/**
+ * Remove the outline on focused links when they are also active or hovered
+ * in all browsers (opinionated).
+ */
 
-input, select
-  vertical-align: middle
+a:active,
+a:hover {
+  outline-width: 0;
+}
 
-pre
-  white-space: pre
-  // CSS2
-  white-space: pre-wrap
-  // CSS 2.1
-  white-space: pre-line
-  // CSS 3 (and 2.1 as well, actually)
-  word-wrap: break-word
-  // IE
+/* Text-level semantics
+   ========================================================================== */
 
-input[type="radio"]
-  vertical-align: text-bottom
+/**
+ * 1. Remove the bottom border in Firefox 39-.
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
 
-input[type="checkbox"]
-  vertical-align: bottom
+abbr[title] {
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  text-decoration: underline dotted; /* 2 */
+}
 
-select, input, textarea
-  font: 99%
+/**
+ * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
+ */
 
-table
-  font-size: inherit
-  font: 100%
+b,
+strong {
+  font-weight: inherit;
+}
 
-small
-  font-size: 85%
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
 
-strong
-  font-weight: 700
+b,
+strong {
+  font-weight: bolder;
+}
 
-td, td img
-  vertical-align: top
+/**
+ * Add the correct font style in Android 4.3-.
+ */
 
-// Make sure sup and sub don't mess with your line-heights http://gist.github.com/413930
-sub, sup
-  font-size: 75%
-  line-height: 0
-  position: relative
+dfn {
+  font-style: italic;
+}
 
-sup
-  top: -0.5rem
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
 
-sub
-  bottom: -0.25rem
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
 
-// standardize any monospaced elements
-pre, code, kbd, samp
-  font-family: monospace, sans-serif
+/**
+ * Add the correct background and color in IE 9-.
+ */
 
-// hand cursor on clickable elements
-label,
-input[type=button],
-input[type=submit],
-input[type=file],
-button
-  cursor: pointer
+mark {
+  background-color: #ff0;
+  color: #000;
+}
 
-// Webkit browsers add a 2px margin outside the chrome of form elements
-button, input, select, textarea
-  margin: 0
+/**
+ * Add the correct font size in all browsers.
+ */
 
-// make buttons play nice in IE
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/* Embedded content
+   ========================================================================== */
+
+/**
+ * Remove the border on images inside links in IE 10-.
+ */
+
+img {
+  border-style: none;
+}
+
+/**
+ * Hide the overflow in IE.
+ */
+
+svg:not(:root) {
+  overflow: hidden;
+}
+
+/* Grouping content
+   ========================================================================== */
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/**
+ * Add the correct margin in IE 8.
+ */
+
+figure {
+  margin: 1em 40px;
+}
+
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+
+hr {
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
+}
+
+/* Forms
+   ========================================================================== */
+
+/**
+ * 1. Change font properties to `inherit` in all browsers (opinionated).
+ * 2. Remove the margin in Firefox and Safari.
+ */
+
 button,
-input[type=button]
-  width: auto
-  overflow: visible
+input,
+optgroup,
+select,
+textarea {
+  font: inherit; /* 1 */
+  margin: 0; /* 2 */
+}
+
+/**
+ * Restore the font weight unset by the previous rule.
+ */
+
+optgroup {
+  font-weight: bold;
+}
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+
+button,
+input { /* 1 */
+  overflow: visible;
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+
+button,
+select { /* 1 */
+  text-transform: none;
+}
+
+/**
+ * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
+ *    controls in Android 4.
+ * 2. Correct the inability to style clickable types in iOS and Safari.
+ */
+
+button,
+html [type="button"], /* 1 */
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button; /* 2 */
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+ * Change the border, margin, and padding in all browsers (opinionated).
+ */
+
+fieldset {
+  border: 1px solid #c0c0c0;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em;
+}
+
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+
+legend {
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
+}
+
+/**
+ * Remove the default vertical scrollbar in IE.
+ */
+
+textarea {
+  overflow: auto;
+}
+
+/**
+ * 1. Add the correct box sizing in IE 10-.
+ * 2. Remove the padding in IE 10-.
+ */
+
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
+}
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+
+[type="search"] {
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
+}
+
+/**
+ * Remove the inner padding and cancel buttons in Chrome and Safari on OS X.
+ */
+
+[type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * Correct the text style of placeholders in Chrome, Edge, and Safari.
+ */
+
+::-webkit-input-placeholder {
+  color: inherit;
+  opacity: 0.54;
+}
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
+}
