FUCK YOU ANDREW

--- a/src/base/_base.sass
+++ b/src/base/_base.sass
@@ -20,7 +20,7 @@ html
 // Default body styles
 body
   background: $body-background-color
-  color: $body-font-color
+  color: $text-color
   font-size: 1.6rem
 
 article,
