--- a/src/base/_reset.sass
+++ b/src/base/_reset.sass
@@ -6,20 +6,18 @@
  * 3. Prevent adjustments of font size after orientation changes in IE and iOS.
  */
 
-html {
-  font-family: sans-serif; /* 1 */
-  line-height: 1.15; /* 2 */
-  -ms-text-size-adjust: 100%; /* 3 */
-  -webkit-text-size-adjust: 100%; /* 3 */
-}
+html
+  font-family: sans-serif /* 1 */
+  line-height: 1.15 /* 2 */
+  -ms-text-size-adjust: 100% /* 3 */
+  -webkit-text-size-adjust: 100% /* 3 */
 
 /**
  * Remove the margin in all browsers (opinionated).
  */
 
-body {
-  margin: 0;
-}
+body
+  margin: 0
 
 /* HTML5 display definitions
    ========================================================================== */
@@ -41,9 +39,8 @@ main, /* 2 */
 menu,
 nav,
 section,
-summary { /* 1 */
-  display: block;
-}
+summary /* 1 */
+  display: block
 
 /**
  * Add the correct display in IE 9-.
@@ -52,26 +49,23 @@ summary { /* 1 */
 audio,
 canvas,
 progress,
-video {
-  display: inline-block;
-}
+video
+  display: inline-block
 
 /**
  * Add the correct display in iOS 4-7.
  */
 
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
+audio:not([controls])
+  display: none
+  height: 0
 
 /**
  * Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
 
-progress {
-  vertical-align: baseline;
-}
+progress
+  vertical-align: baseline
 
 /**
  * Add the correct display in IE 10-.
@@ -79,9 +73,8 @@ progress {
  */
 
 template, /* 1 */
-[hidden] {
-  display: none;
-}
+[hidden]
+  display: none
 
 /* Links
    ========================================================================== */
@@ -91,10 +84,9 @@ template, /* 1 */
  * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
  */
 
-a {
-  background-color: transparent; /* 1 */
-  -webkit-text-decoration-skip: objects; /* 2 */
-}
+a
+  background-color: transparent /* 1 */
+  -webkit-text-decoration-skip: objects /* 2 */
 
 /**
  * Remove the outline on focused links when they are also active or hovered
@@ -102,9 +94,8 @@ a {
  */
 
 a:active,
-a:hover {
-  outline-width: 0;
-}
+a:hover
+  outline-width: 0
 
 /* Text-level semantics
    ========================================================================== */
@@ -114,64 +105,57 @@ a:hover {
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
 
-abbr[title] {
-  border-bottom: none; /* 1 */
-  text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
-}
+abbr[title]
+  border-bottom: none /* 1 */
+  text-decoration: underline /* 2 */
+  text-decoration: underline dotted /* 2 */
 
 /**
  * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
  */
 
 b,
-strong {
-  font-weight: inherit;
-}
+strong
+  font-weight: inherit
 
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
  */
 
 b,
-strong {
-  font-weight: bolder;
-}
+strong
+  font-weight: bolder
 
 /**
  * Add the correct font style in Android 4.3-.
  */
 
-dfn {
-  font-style: italic;
-}
+dfn
+  font-style: italic
 
 /**
  * Correct the font size and margin on `h1` elements within `section` and
  * `article` contexts in Chrome, Firefox, and Safari.
  */
 
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
+h1
+  font-size: 2em
+  margin: 0.67em 0
 
 /**
  * Add the correct background and color in IE 9-.
  */
 
-mark {
-  background-color: #ff0;
-  color: #000;
-}
+mark
+  background-color: #ff0
+  color: #000
 
 /**
  * Add the correct font size in all browsers.
  */
 
-small {
-  font-size: 80%;
-}
+small
+  font-size: 80%
 
 /**
  * Prevent `sub` and `sup` elements from affecting the line height in
@@ -179,20 +163,17 @@ small {
  */
 
 sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
+sup
+  font-size: 75%
+  line-height: 0
+  position: relative
+  vertical-align: baseline
 
-sub {
-  bottom: -0.25em;
-}
+sub
+  bottom: -0.25em
 
-sup {
-  top: -0.5em;
-}
+sup
+  top: -0.5em
 
 /* Embedded content
    ========================================================================== */
@@ -201,17 +182,15 @@ sup {
  * Remove the border on images inside links in IE 10-.
  */
 
-img {
-  border-style: none;
-}
+img
+  border-style: none
 
 /**
  * Hide the overflow in IE.
  */
 
-svg:not(:root) {
-  overflow: hidden;
-}
+svg:not(:root)
+  overflow: hidden
 
 /* Grouping content
    ========================================================================== */
@@ -224,29 +203,26 @@ svg:not(:root) {
 code,
 kbd,
 pre,
-samp {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
+samp
+  font-family: monospace, monospace /* 1 */
+  font-size: 1em /* 2 */
 
 /**
  * Add the correct margin in IE 8.
  */
 
-figure {
-  margin: 1em 40px;
-}
+figure
+  margin: 1em 40px
 
 /**
  * 1. Add the correct box sizing in Firefox.
  * 2. Show the overflow in Edge and IE.
  */
 
-hr {
-  box-sizing: content-box; /* 1 */
-  height: 0; /* 1 */
-  overflow: visible; /* 2 */
-}
+hr
+  box-sizing: content-box /* 1 */
+  height: 0 /* 1 */
+  overflow: visible /* 2 */
 
 /* Forms
    ========================================================================== */
@@ -260,18 +236,16 @@ button,
 input,
 optgroup,
 select,
-textarea {
-  font: inherit; /* 1 */
-  margin: 0; /* 2 */
-}
+textarea
+  font: inherit /* 1 */
+  margin: 0 /* 2 */
 
 /**
  * Restore the font weight unset by the previous rule.
  */
 
-optgroup {
-  font-weight: bold;
-}
+optgroup
+  font-weight: bold
 
 /**
  * Show the overflow in IE.
@@ -279,9 +253,8 @@ optgroup {
  */
 
 button,
-input { /* 1 */
-  overflow: visible;
-}
+input /* 1 */
+  overflow: visible
 
 /**
  * Remove the inheritance of text transform in Edge, Firefox, and IE.
@@ -289,9 +262,8 @@ input { /* 1 */
  */
 
 button,
-select { /* 1 */
-  text-transform: none;
-}
+select /* 1 */
+  text-transform: none
 
 /**
  * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
@@ -302,9 +274,8 @@ select { /* 1 */
 button,
 html [type="button"], /* 1 */
 [type="reset"],
-[type="submit"] {
-  -webkit-appearance: button; /* 2 */
-}
+[type="submit"]
+  -webkit-appearance: button /* 2 */
 
 /**
  * Remove the inner border and padding in Firefox.
@@ -313,10 +284,9 @@ html [type="button"], /* 1 */
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
+[type="submit"]::-moz-focus-inner
+  border-style: none
+  padding: 0
 
 /**
  * Restore the focus styles unset by the previous rule.
@@ -325,19 +295,17 @@ button::-moz-focus-inner,
 button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
+[type="submit"]:-moz-focusring
+  outline: 1px dotted ButtonText
 
 /**
  * Change the border, margin, and padding in all browsers (opinionated).
  */
 
-fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
-}
+fieldset
+  border: 1px solid #c0c0c0
+  margin: 0 2px
+  padding: 0.35em 0.625em 0.75em
 
 /**
  * 1. Correct the text wrapping in Edge and IE.
@@ -346,22 +314,20 @@ fieldset {
  *    `fieldset` elements in all browsers.
  */
 
-legend {
-  box-sizing: border-box; /* 1 */
-  color: inherit; /* 2 */
-  display: table; /* 1 */
-  max-width: 100%; /* 1 */
-  padding: 0; /* 3 */
-  white-space: normal; /* 1 */
-}
+legend
+  box-sizing: border-box /* 1 */
+  color: inherit /* 2 */
+  display: table /* 1 */
+  max-width: 100% /* 1 */
+  padding: 0 /* 3 */
+  white-space: normal /* 1 */
 
 /**
  * Remove the default vertical scrollbar in IE.
  */
 
-textarea {
-  overflow: auto;
-}
+textarea
+  overflow: auto
 
 /**
  * 1. Add the correct box sizing in IE 10-.
@@ -369,54 +335,48 @@ textarea {
  */
 
 [type="checkbox"],
-[type="radio"] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
-}
+[type="radio"]
+  box-sizing: border-box /* 1 */
+  padding: 0 /* 2 */
 
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
 
 [type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
+[type="number"]::-webkit-outer-spin-button
+  height: auto
 
 /**
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */
 
-[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
-}
+[type="search"]
+  -webkit-appearance: textfield /* 1 */
+  outline-offset: -2px /* 2 */
 
 /**
  * Remove the inner padding and cancel buttons in Chrome and Safari on OS X.
  */
 
 [type="search"]::-webkit-search-cancel-button,
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
+[type="search"]::-webkit-search-decoration
+  -webkit-appearance: none
 
 /**
  * Correct the text style of placeholders in Chrome, Edge, and Safari.
  */
 
-::-webkit-input-placeholder {
-  color: inherit;
-  opacity: 0.54;
-}
+::-webkit-input-placeholder
+  color: inherit
+  opacity: 0.54
 
 /**
  * 1. Correct the inability to style clickable types in iOS and Safari.
  * 2. Change font properties to `inherit` in Safari.
  */
 
-::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
-  font: inherit; /* 2 */
-}
+::-webkit-file-upload-button
+  -webkit-appearance: button /* 1 */
+  font: inherit /* 2 */
