--- a/src/ghast.sass
+++ b/src/ghast.sass
@@ -2,6 +2,8 @@
 // Sass Modules
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
+// Import normalize.css
+@import base/reset
 
 // Important functions to be used in other files.
 @import utilities/functions
@@ -29,6 +31,7 @@
 @import components/link
 @import components/list
 @import components/media
+@import components/menu
 @import components/switches
 @import components/table
 @import components/tabs
